--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <header class="d-flex justify-content-center py-2 border-bottom fixed-top bg-light">
       <ul class="nav nav-pills">
-        <li class="nav-item"><a href="#about-me" class="nav-link text-danger" aria-current="page">About me</a></li>
-        <li class="nav-item"><a href="#software-engineering" class="nav-link text-primary">Software Engineering</a></li>
-        <li class="nav-item"><a href="#music" class="nav-link text-dark">Music</a></li>
-        <li class="nav-item"><a href="#board-games" class="nav-link text-success">Board games</a></li>
+        <li class="nav-item"><a href="/#about-me" class="nav-link text-danger" aria-current="page">About me</a></li>
+        <li class="nav-item"><a href="/#software-engineering" class="nav-link text-primary">Software Engineering</a></li>
+        <li class="nav-item"><a href="/#music" class="nav-link text-dark">Music</a></li>
+        <li class="nav-item"><a href="/#board-games" class="nav-link text-success">Board games</a></li>
       </ul>
     </header>
     <div class="container">
@@ -57,7 +57,9 @@
     <div class="container">
       <section id="board-games" class="my-5 py-4">
         <h4 class="text-bg-success p-1">Board games</h4>
-        <p>...</p>
+        <p>
+          <a href="https://darioleidi.com/bamboo.html">Bamboo</a>
+        </p>
       </section>
     </div>
     <div class="container">
