--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <h5>Dario Leidi</h5>
             <div>
               A <a href="#software-engineering">software engineer</a> and a <a href="#music">musician</a><br/>
-              I love to be challenged.<br/>
-              I am a <a href="#board-games">Board games</a> fan and a DYI passionate<br/>
-              I practice sports as hobbies<br/>
-              I'm from Italy<br/>
+              A <a href="#board-games">Board games</a> fan and a DYI passionate<br/>
+              Sports and outdoor as hobbies<br/>
+              I'm from Italy, and a member of the italian <a href="http://mensa.it" target="_blank">Mensa</a><br/>
+              I love to be challenged!!
             </div>
           </div>
         </div>
